<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DND Player Companion</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="save_question">Save Stats</string>
    <string name="add_character">Add Character</string>
    <string name="add_stat">Add Stats</string>
    <string name="stat_updated">Stat updated.</string>
    <string name="stat_deleted">Stat deleted.</string>
    <string name="create">Create</string>
    <string name="character">New character?</string>
    <string name="cancel">Cancel</string>
    <string name="edit_stat">Edit Stats</string>
    <string name="character_exists">The character "%1$s" already exists.</string>
    <string name="select_character">Select a character:</string>
    <string name="undo">Undo</string>
    <string name="character_resources">Class Resources</string>
    <string name="character_details">Character Details</string>
    <string name="character_stats">Character Stats</string>
    <string name="cha">CHA:</string>
    <string name="wis">WIS:</string>
    <string name="Int">INT:</string>
    <string name="con">CON:</string>
    <string name="dex">DEX:</string>
    <string name="str">STR:</string>
    <string name="ac">AC:</string>
    <string name="hp">HP:</string>
    <string name="level">Level:</string>
    <string name="Class">Class:</string>
    <string name="race">Race:</string>
    <string name="name">Name:</string>
    <string name="is_skill_proficient">Is Skill Proficient?</string>
    <string name="please_roll_dice">Please Roll Dice</string>
    <string name="roll">Roll</string>
    <string name="about">About</string>
</resources>